--- a/Memberships/Views/Shared/_AdminMenuPartial.cshtml
+++ b/Memberships/Views/Shared/_AdminMenuPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<li class="dropdown" data-admin-menu>
+﻿<li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin
         <span class="caret"></span>
     </a>
