--- a/Memberships/Areas/Admin/Views/Part/Index.cshtml
+++ b/Memberships/Areas/Admin/Views/Part/Index.cshtml
@@ -1,17 +1,17 @@
-﻿@model IEnumerable<Memberships.Entities.Section>
+﻿@model IEnumerable<Memberships.Entities.Part>
 @using Memberships.Areas.Admin.Models
 
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index - Section</h2>
+<h2>Index - Parts</h2>
 
 <p>
     @Html.Partial("_CreateNewButtonPartial")
 </p>
-<table class="table table-striped table-hover">
-    <tr class="success">
+<table class="table">
+    <tr class="bg-success">
         <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
@@ -23,8 +23,8 @@
         <td class="col-sm-10">
             @Html.DisplayFor(modelItem => item.Title)
         </td>
-        <td class="col-sm-2" style="text-align: right;">
-            @Html.Partial("_TableButtonsGroupPartial", new SmallButtonModel { Id = item.Id})
+        <td class="col-sm-2" style="text-align: right">
+            @Html.Partial("_TableButtonsGroupPartial", new SmallButtonModel { Id = item.Id })
         </td>
     </tr>
 }
