--- a/Memberships/Areas/Admin/Views/ItemType/Index.cshtml
+++ b/Memberships/Areas/Admin/Views/ItemType/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<Memberships.Entities.Part>
+﻿@model IEnumerable<Memberships.Entities.ItemType>
 @using Memberships.Areas.Admin.Models
 
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index - Parts</h2>
+<h2>Index - Item Types</h2>
 
 <p>
     @Html.Partial("_CreateNewButtonPartial")
